includes/css/style.css
/* ... */
.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons li {
	display: inline-block;
	padding: 3px;
	margin: 0;
	-webkit-box-sizing: border-box;
	-moz-box-sizing:    border-box;
	box-sizing:         border-box;
}
.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-float-left li {
	padding-right: 6px;
	padding-left: 0;
}
.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-float-right li {
	padding-right: 0;
	padding-left: 6px;
}
.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-8 li {
	width: 12.5%;
}
.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-7 li {
	width: 14.28571428%;
}
.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-6 li {
	width: 16.66666666%;
}
.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-5 li {
	width: 20%;
}
.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-4 li {
	width: 25%;
}
.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-3 li {
	width: 33.33333333%;
}
.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-2 li {
	width: 50%;
}
.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-1 li {
	width: 100%;
}

/**
 * jQuery Countdown styles 1.6.3.
 * ----------------------------------------------------------------------------
 */
.wc-shortcodes-countdown-bg4 {
	margin-bottom: 20px;
}
.wc-shortcodes-countdown {
	border: 1px solid #ccc;
	background-color: #eee;
	text-align: center;
	padding-top: 10px;
	padding-bottom: 10px;
}
.wc-shortcodes-countdown.countdown_rtl {
	direction: rtl;
}
.wc-shortcodes-countdown.countdown_holding div {
	color: #888;
}
.wc-shortcodes-countdown .countdown_row {
	clear: both;
	width: 100%;
	padding: 0px 2px;
	text-align: center;
}
.wc-shortcodes-countdown .countdown_show1 .countdown_section {
	width: 98%;
}
.wc-shortcodes-countdown .countdown_show2 .countdown_section {
	width: 48%;
}
.wc-shortcodes-countdown .countdown_show3 .countdown_section {
	width: 32.5%;
}
.wc-shortcodes-countdown .countdown_show4 .countdown_section {
	width: 24.5%;
}
.wc-shortcodes-countdown .countdown_show5 .countdown_section {
	width: 19.5%;
}
.wc-shortcodes-countdown .countdown_show6 .countdown_section {
	width: 16.25%;
}
.wc-shortcodes-countdown .countdown_show7 .countdown_section {
	width: 14%;
}
.wc-shortcodes-countdown .countdown_section {
	display: inline-block;
	font-size: 80%;
	text-align: center;
	border-right: 1px solid #cccccc;
}
.wc-shortcodes-countdown .countdown_row *:last-child,
.wc-shortcodes-countdown .countdown_row:last-child {
	border-width: 0;
}
.wc-shortcodes-countdown .countdown_amount {
	font-size: 200%;
}
.wc-shortcodes-countdown .countdown_descr {
	display: block;
	width: 100%;
}
.wc-shortcodes-countdown .countdown_expired_message {
	font-size: 200%;
}


/**
 * [wc_rsvp]
 * ----------------------------------------------------------------------------
 */
.wc-shortcodes-rsvp input[type="text"], 
.wc-shortcodes-rsvp textarea, 
.wc-shortcodes-rsvp select {
	width: 100%;
}
.wc-shortcodes-rsvp-align-center {
	text-align: center;
}
.wc-shortcodes-rsvp-align-right {
	text-align: right;
}
.rsvp-button-align-center .rsvp-button-wrapper {
	text-align: center;
}
.rsvp-button-align-center .wc-shortcodes-box {
	text-align: center;
}
.rsvp-button-align-right .rsvp-button-wrapper {
	text-align: right;
}
.rsvp-button-align-right .wc-shortcodes-box {
	text-align: right;
}
.rsvp-button-align-left .rsvp-button-wrapper {
	text-align: left;
}
.rsvp-button-align-left .wc-shortcodes-box {
	text-align: left;
}
.wc-shortcodes-rsvp .wc-shortcodes-box {
	padding-top: 5px;
	padding-bottom: 5px;
	display: none;
}


/**
 * [wc_post]
 * ----------------------------------------------------------------------------
 */
.wc-shortcodes-post-content {
	padding: 0 20px;
}
.wc-shortcodes-post-border {
	border: 1px solid #dddddd;
}
.wc-shortcodes-entry-thumbnail {
	margin: 0;
	text-align: center;
}
.wc-shortcodes-entry-title {
	margin-top: 20px;
	margin-bottom: 20px;
	-ms-word-wrap: break-word;
	word-wrap: break-word;
}
.wc-shortcodes-entry-meta {
	margin-top: 20px;
	margin-bottom: 0;
}
.wc-shortcodes-entry-meta-inner {
	margin-bottom: 20px;
}
.wc-shortcodes-entry-summary {
	margin-top: 20px;
	margin-bottom: 0;
}
.wc-shortcodes-entry-quote blockquote {
	margin-top: 0;
	padding: 10px 20px;
}
.wc-shortcodes-footer-entry-meta {
	margin-top: 20px;
	margin-bottom: 0;
	font-size: 80%;
}
.wc-shortcodes-posts {
	position: relative;
	visibility: hidden;
}
.wc-shortcodes-posts.wc-shortcodes-posts-no-masonry {
	visibility: visible;
}
.wc-shortcodes-post-box {
	background-color: #ffffff;
	margin-bottom: 20px;
	padding: 0;
}
.wc-shortcodes-sep {
	padding-left: 5px;
	padding-right: 5px;
}
.wc-shortcodes-sep,
.wc-shortcodes-author,
.wc-shortcodes-date {
	float: left;
}
/* Comment Box */
.wc-shortcodes-comments-link {
	float: right;
}
.wc-shortcodes-comments-link a {
	position: relative;
	margin-left: 3px;
	padding: 2px 7px;
	background-color: #eeeeee;
	color: #999999;
	line-height: 1;
}

.wc-shortcodes-comments-link a:after {
	content: "";
	position: absolute;
	left: 40%;
	bottom: -8px;
	width: 0px;
	height: 0px;
	border-bottom: 8px solid rgba(255,255,255,0);
	border-left: 8px solid #eeeeee;
	font-size: 0px;
	line-height: 0px;
}
.wc-shortcodes-comments-link a,
.wc-shortcodes-comments-link a:hover,
.wc-shortcodes-comments-link a:visited,
.wc-shortcodes-comments-link a:active,
.wc-shortcodes-comments-link a:focus {
	color: #999999;
	text-decoration: none;
}

/* masonry filtering */
.wc-shortcodes-filtering {
	margin-bottom: 20px;
}
.wc-shortcodes-filtering .tag-divider {
	display: inline-block;
	padding: 0 7px;
}

/* Post Gallery Slider */
.rslides-wrapper {
	position: relative;
	background-color: #000000;
}
/* ... */

